# neural-brain

./: .gitignore  .python-version  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  pyproject.toml  type-exceptions.toml
.github/: CODEOWNERS  gitleaks.toml  pull_request_template.md  security-policy.json
.github/workflows/: migrations.yml  quality.yml  release.yml  security.yml
docs/adr/: ADR-001-product-neutral-platform-boundary.md  ADR-002-immutable-scope-on-persistent-objects.md  ADR-003-postgresql-authoritative-transactional-ledger.md  ADR-004-transition-gates-own-protected-state.md  ADR-005-hard-security-floor-and-bounded-policy.md  ADR-006-hierarchical-kill-switch.md  ADR-007-normative-goal-and-action-state-machines.md  ADR-008-atomic-action-preparation-and-commit.md  ADR-009-stage-1-dispatch-journal.md  ADR-010-staged-memory-capabilities.md  ADR-011-independent-verification-completion-gate.md  ADR-012-retention-aware-evidence-immutability.md  README.md  STATUS.md  (+8 more)
migrations/: 0001_scope_catalog.sql  0002_stage1_memory_kernel.sql  0003_dreaming_dry_run.sql  0004_nb1_cognitive_checkpoints.sql  0005_local_demo_provisioning_gate.sql  0006_oidc_consumer_read_gates.sql  README.md
src/: README.md
tests/: README.md
tools/: README.md  __init__.py  bootstrap_database_roles.py  build_release_evidence.py  dev.ps1  export_nb1_evaluation_candidate.py  install_memory_core.py  memory_demo.py  postgres_smoke.py  quality.py  security_policy.py  select_codex_model.py  train_nb1_workspace.py  type_exception_audit.py  validate_adrs.py  validate_migrations.py
(+147 files in other folders)
