[project]
name = "neural-brain"
version = "0.0.0"
description = "A product-neutral, safety-constrained integrated neural cognitive system."
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "cryptography>=46,<47",
    "psycopg[binary]>=3,<4",
    "pydantic>=2,<3",
]

[dependency-groups]
dev = [
    "hypothesis>=6,<7",
    "jsonschema>=4,<5",
    "mypy>=2,<3",
    "pytest>=9,<10",
    "ruff>=0.12,<1",
]

[tool.uv]
required-version = "==0.11.28"
package = false
python-preference = "only-managed"

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [".local"]

[tool.ruff.lint]
select = ["ANN", "B", "E4", "E7", "E9", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_unimported = true
disallow_any_generics = true
enable_error_code = ["ignore-without-code", "explicit-override", "mutable-override"]
files = ["src", "tests", "tools"]
exclude = ["^\\.local/", "^\\.venv/"]
show_error_codes = true
show_error_context = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
pythonpath = [".", "src"]
testpaths = ["tests"]
